[tool.poetry]
name = "the-butler-2"
version = "0.1.0"
description = ""
authors = ["hdadhich01 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
html2text = "^2020.1.16"
tinydb = "^4.4.0"
art = "^5.1"
portolan = "^1.0.1"
discord = "^1.0.1"
flask = "^1.1.2"
humanize = "^3.4.1"
psutil = "^5.8.0"
aiohttp = "^3.7.4"
pytz = "^2021.1"
ordinal = "^1.0.3"
imutils = "^0.5.4"
opencv-python = "^4.5.1"
scikit-image = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
