[tool.poetry]
name = "repl_python3_Albert"
version = "0.1.0"
description = ""
authors = ["hdadhich01 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
tinydb = "^4.4.0"
art = "^5.2"
discord = "^1.0.1"
humanize = "^3.7.1"
pytz = "^2021.1"
flask = "^2.0.1"
replit = "^3.1.0"
html2text = "^2020.1.16"
portolan = "^1.0.1"
psutil = "^5.8.0"
ordinal = "^1.0.3"
Pillow = "^9.0.1"
colorthief = "^0.2.1"
"discord.py" = "^1.7.3"
pytimeparse = "^1.1.8"
asyncpg = "^0.24.0"
utils = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
